RESOLVED FIXED77093
[EFL] Added missing NETSCAPE_PLUGIN_API macro
https://bugs.webkit.org/show_bug.cgi?id=77093
Summary [EFL] Added missing NETSCAPE_PLUGIN_API macro
Tomasz Morawski
Reported 2012-01-26 04:34:27 PST
The ewk_view_js_window_object_clear function should be inside ENABLE(NETSCAPE_PLUGIN_API) macro.
Attachments
Added missing macro (1.31 KB, patch)
2012-01-26 04:35 PST, Tomasz Morawski
no flags
Tomasz Morawski
Comment 1 2012-01-26 04:35:26 PST
Created attachment 124104 [details] Added missing macro
Raphael Kubo da Costa (:rakuco)
Comment 2 2012-01-26 05:17:43 PST
Looks good.
Grzegorz Czajkowski
Comment 3 2012-01-26 05:27:06 PST
LGTM too.
WebKit Review Bot
Comment 4 2012-01-26 05:53:28 PST
Comment on attachment 124104 [details] Added missing macro Clearing flags on attachment: 124104 Committed r105996: <http://trac.webkit.org/changeset/105996>
WebKit Review Bot
Comment 5 2012-01-26 05:53:32 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.