[EFL] Added missing NETSCAPE_PLUGIN_API macro. https://bugs.webkit.org/show_bug.cgi?id=77093

Patch by Tomasz Morawski <t.morawski@samsung.com> on 2012-01-26
Reviewed by Andreas Kling.

The ewk_view_js_window_object_clear function should be inside ENABLE(NETSCAPE_PLUGIN_API) macro.

* ewk/ewk_view.cpp:

Canonical link: https://commits.webkit.org/93986@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105996 268f45cc-cd09-0410-ab3c-d52691b4dbfc